--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-        <title>Wordle &mdash; A daily word game</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>EGGLE &mdash; A Daily Word Game</title>
         <link href="/static/favicon.png" rel="shortcut icon" type="image/png" />
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/index.tsx"></script>
+        <script type="module" src="./index.tsx"></script>
     </body>
 </html>
